k8s-practice/environments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: churn-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: churn-staging
