k8s-practice/broken-imagepull.yaml
apiVersion: v1
kind: Pod
metadata:
  name: broken-imagepull
spec:
  containers:
    - name: churn-api
      image: churn-api:v99
      imagePullPolicy: Never
