k8s-practice/broken-pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: broken-pending
spec:
  containers:
    - name: churn-api
      image: churn-api:v1
      imagePullPolicy: Never
      resources:
        requests:
          memory: "100Gi"
