k8s-practice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-api-service
spec:
  selector:
    app: churn-api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
